--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     min-idle: 15
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     properties:
       hibernate:
         #dialect: org.hibernate.dialect.H2Dialect
@@ -24,7 +24,9 @@ spring:
 
 server:
    port: 8080 # This is the default port anyway, but you can change it here
-
+app:
+  cors:
+    allowedOrigins: http://localhost:8000
 security:
   jwt:
     token:
